--- a/style/style.css
+++ b/style/style.css
@@ -39,3 +39,36 @@ content: "";
 display: block;
 clear: both;
 }
+nav {
+    background-color: #cccccc;
+    float: left;
+    width: 20%;
+    padding: 20px;
+}
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+nav li {
+    padding-bottom: 12px;
+}
+article {
+    float: left;
+    padding: 20px;
+    width: 80%;
+    background-color: #f1f1f1;
+}
+div.article_image {
+    float: left;
+    padding: 5px;
+}
+div.article_text {
+    padding: 20px;
+    width: 100%;
+    text-align: justify;
+}
+div.article_text:after{
+    content: "";
+    display: block;
+    clear: both;
+}
