--- a/style/style.css
+++ b/style/style.css
@@ -97,3 +97,29 @@ font-size: 18px;
     text-align: center;
     color: rgb(45, 3, 230);
 }
+@media screen and (max_width: 1024px) {
+    .item_art {
+        -webkit-flex-direction: column;
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 600px) {
+    .item_art {
+        -webkit-flex-direction: column;
+        flex-direction: column;
+    }    
+
+    .main_container {
+        -webkit-flex-direction: column;
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: stretch;
+        align-content: stretch;
+    }
+    .mainitem_nav {
+        flex: 1 1 auto;
+        width: 100%;
+        max-width: 769px;
+        padding: 20px;
+    }
+}
