--- a/style/style.css
+++ b/style/style.css
@@ -148,3 +148,4 @@ text-align: center;
         "div_art_video_area  div_art_video_area  div_art_video_area"
         "div_foot_area       div_foot_area       div_foot_area";
 }
+}
